# selfrando

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SConstruct  appveyor.yml  build_cmake.sh  self-rando-windows.sln
Docs/: linux-build-instructions.md
LinuxSymproc/: MapFileParser.h  ObjectFileParser.cpp  ObjectFileParser.h  SConscript  symproc.cpp  wrapper.py
LinuxSymproc/elfio/: elfio_section.hpp
PatchEntry/: SConscript
PatchEntry/posix/: PatchEntry.cpp
RandoLib/: OS.h  RandoLib.cpp  SConscript  TrapInfo.h
RandoLib/posix/: OSImpl.cpp  OSImpl.h  TrapHeader.S
RandoLib/posix/x86/: Relocation.cpp
RandoLib/posix/x86_64/: EntryPoint.S  Relocation.cpp
RandoLib/util/: fnv.h  hash_32a.c  rand_linux.c  rand_r.c
Tests/: lua.sh  nginx.sh  thttpd.sh
Tools/Firefox/extension/: selfrando.css  selfrando.js  selfrando.xml  selfrando.xul
Tools/TorBrowser/docker/: README.md
Tools/TorBrowser/tc-wrapper/: cc  cc1  cc1plus  ld
Tools/Wrappers/: cc  cc1  functions.sh  ld  srenv
Tools/Wrappers/Clang/: clang  ld
Tools/Wrappers/GCC/: cc  cc1  ld  srenv
cmake/: Android.cmake
debian/: changelog  control  copyright  gbp.conf
docs/: TRaP_specification.md  design.md  linux-build-instructions.md  textrap.txt  windows-build-instructions.md
scripts/: TrapLinker32.props.mako  TrapLinker64.props.mako  argtrace.py  build_cmake.sh  build_libelf.sh  gen_scripts.py  parse_textrap.py  setup_android_build.py  trap-msvc-libs.py  trap_msvc_libs.py  update_vcxproj.py
src/: CMakeLists.txt
src/LinuxSymproc/: .gitignore  ObjectFileParser.h  symproc.cpp
src/LinuxSymproc/elfio/: elf_types.hpp  elfio.hpp  elfio_segment.hpp
src/PatchEntry/: PatchEntry.vcxproj  PatchEntry.vcxproj.filters  SConscript
src/PatchEntry/win32/: PatchEntry.cpp  PatchEntry.vcxproj  PatchEntry.vcxproj.filters
src/RandoLib/: CMakeLists.txt  OS.h  RandoLib.cpp  RandoLib.h  RandoLib.vcxproj  RandoLib.vcxproj.filters  SConscript  TrapInfo.h  TrapInfoCommon.h
src/RandoLib/arch/arm/: Util.cpp
src/RandoLib/arch/arm64/: Util.cpp
src/RandoLib/arch/x86/: Util.cpp
src/RandoLib/arch/x86_64/: Util.cpp
src/RandoLib/bareflank/: CMakeLists.txt  OSDefs.h  OSImpl.cpp  OSImpl.h  OSModule.h  non_trap_syms.txt
src/RandoLib/bareflank/linux/: decode_cflags.py
src/RandoLib/posix/: CMakeLists.txt  EntryPoint.c  EntryPointExec.c  EntryPointSO.c  ModuleInfo.h  OSDefs.h  OSImpl.cpp  OSImpl.h  OSModule.h  SConscript  TrapCommon.h  TrapFooter.S  TrapFooterNoPage.S  TrapFooterPage.S  TrapHeader.S  TrapHeaderCommon.inc  TrapHeaderPage.S  non_trap_syms.txt  rename_sections_txtrp.sh  selfrando_txtrp.ld
src/RandoLib/posix/arm/: AndroidInit.c  Cache.cpp  EntryPointWrapper.S  LinkerStubs.S  PreinitEntryPoint.S  Relocation.cpp  TrapFooterPage.S  UnwindStubs.c
src/RandoLib/posix/arm64/: Cache.cpp  EntryPointWrapper.S  PreinitEntryPoint.S  Relocation.cpp  Textramp.S  TrapFooterFiller.S  TrapFooterPage.S
src/RandoLib/posix/bionic/: CMakeLists.txt  SYSCALLS.TXT  gensyscalls.py
src/RandoLib/posix/bionic/arch-arm/: CMakeLists.txt  getrandom.S  mmap.cpp
src/RandoLib/posix/bionic/arch-arm/syscalls/: CMakeLists.txt  ___close.S  __connect.S  __getpid.S  __gettimeofday.S  __mmap2.S  __openat.S  __socket.S  cacheflush.S  lseek.S  mprotect.S  mremap.S  munmap.S  read.S  recvmsg.S  unlinkat.S  write.S
src/RandoLib/posix/bionic/arch-arm64/: CMakeLists.txt  ___close.S  getrandom.S  read.S
src/RandoLib/posix/bionic/arch-arm64/syscalls/: CMakeLists.txt  ___close.S  __connect.S  __getpid.S  __gettimeofday.S  __openat.S  __socket.S  getrandom.S  lseek.S  mmap.S  mprotect.S  mremap.S  munmap.S  read.S  recvmsg.S  unlinkat.S  write.S
src/RandoLib/posix/bionic/arch-x86/: CMakeLists.txt  ___close.S  getrandom.S  mmap.cpp  sse2-memset-slm.S
src/RandoLib/posix/bionic/arch-x86/syscalls/: CMakeLists.txt  ___close.S  __connect.S  __getpid.S  __gettimeofday.S  __mmap2.S  __openat.S  __socket.S  getrandom.S  lseek.S  mprotect.S  mremap.S  munmap.S  read.S  recvmsg.S  unlinkat.S  write.S
src/RandoLib/posix/bionic/arch-x86_64/: CMakeLists.txt  ___close.S  __getpid.S  read.S
src/RandoLib/posix/bionic/arch-x86_64/syscalls/: CMakeLists.txt  ___close.S  __connect.S  __getpid.S  __gettimeofday.S  __openat.S  __socket.S  getrandom.S  lseek.S  mmap.S  mprotect.S  mremap.S  munmap.S  read.S  recvmsg.S  unlinkat.S  write.S
src/RandoLib/posix/bionic/libc/: open.cpp
src/RandoLib/posix/bionic/private/: bionic_asm.h
src/RandoLib/posix/bionic/upstream-netbsd/: rand_r.c
src/RandoLib/posix/bionic/upstream-openbsd/: getenv.c  strtol.c  time.c
src/RandoLib/posix/util/: rand_linux.cpp
src/RandoLib/posix/x86/: Cache.cpp  EntryPoint.S  EntryPointWrapper.S  PreinitEntryPoint.S  Relocation.cpp  Textramp.S  TrapFooterFiller.S  TrapFooterPage.S  sr_begin.S  sr_end.S
src/RandoLib/posix/x86_64/: Cache.cpp  EntryPointWrapper.S  PreinitEntryPoint.S  Relocation.cpp  Textramp.S  TrapFooterFiller.S  TrapFooterPage.S
src/RandoLib/util/: chacha_private.h  fnv.h  hashmap.h  printf.cpp  qsort.c  rand_chacha.cpp  strtol.c
src/RandoLib/win32/: OSDefs.h  OSImpl.cpp  OSImpl.h  OSModule.h  RandoLib.vcxproj  RandoLib.vcxproj.filters  Relocation.cpp  SConscript  SysFunctions.inc  TrapHeader.asm
src/RandoLib/win32/x86/: EntryPoint.asm  Relocation.cpp
src/RandoLib/win32/x86_64/: EntryPoint.asm  Relocation.cpp  TrapHeader.asm
src/Support/: Debug.cpp  Filesystem.cpp  Filesystem.h  SConscript
src/TrapInfo/: CMakeLists.txt  SConscript  TrapDump.c  TrapDump.h  TrapInfo.h  TrapInfoRelocs.h  TrapPlatform.h
src/TrapLinker/: SConscript  Trap.h  TrapCommon.vcxproj  TrapCommon.vcxproj.filters
src/TrapLinker/posix/: CMakeLists.txt  ELF.cpp  IgnoredOptions.table  LinkerOptions.table  Object.h  SConscript  TrapLinker.cpp  gen_options.py  linker_id.sh  linker_script.ld  linker_script_got_only.ld  linker_script_got_plt.ld  provide_TRaP_end_page.ld
src/TrapLinker/posix/arch/arm/: ELF.cpp
src/TrapLinker/posix/arch/arm64/: ELF.cpp
src/TrapLinker/posix/arch/x86/: ELF.cpp
src/TrapLinker/posix/arch/x86_64/: ELF.cpp
tests/posix/: lua.sh
tests/win32/: python36.ps1
(+58 files in other folders)
